--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Photonics • Plasmonics • Application of AI/ML in healthcare
 
 <div class="links">
 <a href="https://scholar.google.com/citations?hl=en&user=xDMzlr0AAAAJ" target="_blank">Google Scholar</a>
-<a href="cv.pdf" target="_blank">CV</a>
+<a href="CV.pdf" target="_blank">CV</a>
 <a href="https://www.linkedin.com/in/albertrakesh/" target="_blank">LinkedIn</a>
 <a href="mailto:rakesh_n@cpqct.iitr.ac.in">Email</a>
 </div>
@@ -253,3 +253,4 @@ Rakesh Naik/
 
 </body>
 </html>
+
