--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
 <meta charset="UTF-8">
-<title>Rakesh Naik | Photonics Researcher</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Rakesh Naik | Photonics Researcher</title>
 
 <link rel="stylesheet" href="style.css">
 
 </head>
+
+
 <body>
 
 <div class="container">
+
+
+<!-- ================= HEADER ================= -->
 
 <header>
 
@@ -19,38 +27,59 @@
 <img src="profile.png" class="profile-pic">
 
 <div>
+
 <h1>Rakesh Naik</h1>
 
 <p class="subtitle">
 PhD Researcher<br>
-Photonics • Plasmonics • Application of AI/ML in healthcare
+Photonics • Plasmonics • Application of AI/ML in Healthcare
 </p>
 
 <div class="links">
+
 <a href="https://scholar.google.com/citations?hl=en&user=xDMzlr0AAAAJ" target="_blank">Google Scholar</a>
+
 <a href="CV.pdf" target="_blank">CV</a>
+
 <a href="https://www.linkedin.com/in/albertrakesh/" target="_blank">LinkedIn</a>
+
 <a href="mailto:rakesh_n@cpqct.iitr.ac.in">Email</a>
+
 </div>
 
 </div>
 
 <div class="dark-toggle">
+
 <button onclick="toggleDarkMode()">🌙</button>
+
 </div>
 
 </div>
+
 
 <nav>
+
 <a href="#about">About</a>
+
 <a href="#research">Research</a>
+
+<a href="#research-visuals">Visualizations</a>
+
 <a href="#publications">Publications</a>
+
 <a href="#projects">Projects</a>
+
 <a href="blog.html">Blog</a>
+
 <a href="#contact">Contact</a>
+
 </nav>
 
 </header>
+
+
+<!-- ================= ABOUT ================= -->
 
 <section id="about">
 
@@ -67,6 +96,9 @@ My goal is to build next-generation sensing platforms for biomedical diagnostics
 
 </section>
 
+
+<!-- ================= RESEARCH ================= -->
+
 <section id="research">
 
 <h2>Research Interests</h2>
@@ -74,12 +106,21 @@ My goal is to build next-generation sensing platforms for biomedical diagnostics
 <ul>
 
 <li>Surface-Enhanced Raman Scattering (SERS)</li>
-<li>Photonics and plasmonics</li>
-<li>Optical spectroscopy</li>
-<li>Machine learning for sensing</li>
-<li>Quantum optical sensing</li>
+
+<li>Photonics and Plasmonics</li>
+
+<li>Optical Spectroscopy</li>
+
+<li>Machine Learning for Sensing</li>
+
+<li>Quantum Optical Sensing</li>
 
 </ul>
+
+</section>
+
+
+<!-- ================= RESEARCH VISUALS ================= -->
 
 <section id="research-visuals">
 
@@ -87,61 +128,71 @@ My goal is to build next-generation sensing platforms for biomedical diagnostics
 
 <div class="image-grid">
 
+
 <div class="image-card">
 <img src="images/Me.png">
 <p>About Me</p>
 </div>
 
+
 <div class="image-card">
 <img src="images/RF.png">
-<p>Reserach Focus_</p>
+<p>Research Focus</p>
 </div>
+
 
 <div class="image-card">
 <img src="images/RF (2).png">
 <p>Research Focus</p>
 </div>
 
+
 <div class="image-card">
 <img src="images/AAPS.png">
-<p>AAPS</p>
+<p>AI-Assisted Photonic Sensing</p>
 </div>
+
 
 <div class="image-card">
 <img src="images/AOST.png">
-<p>AOST</p>
+<p>Advanced Optical Sensing Techniques</p>
 </div>
+
 
 <div class="image-card">
 <img src="images/BNGST.png">
-<p>BNGST</p>
+<p>Biomedical Nanophotonic Sensing</p>
 </div>
+
 
 <div class="image-card">
 <img src="images/ISD.png">
-<p>ISD</p>
+<p>Interferometric Sensing Design</p>
 </div>
+
 
 <div class="image-card">
 <img src="images/PAQS.png">
-<p>PAQS</p>
+<p>Plasmonic-Assisted Quantum Sensing</p>
 </div>
+
 
 <div class="image-card">
 <img src="images/PWTI.png">
-<p>PWTI</p>
+<p>Photonic Weak Measurement Techniques</p>
 </div>
+
 
 <div class="image-card">
 <img src="images/SAE.png">
-<p>SAE</p>
+<p>Spectroscopy and Experimental Setup</p>
 </div>
+
 
 <div class="image-card">
 <img src="images/EK.png">
-<p>Ek</p>
+<p>Experimental Knowledge and Setup</p>
 </div>
-
 
 
 </div>
@@ -149,45 +200,37 @@ My goal is to build next-generation sensing platforms for biomedical diagnostics
 </section>
 
 
-</section>
+<!-- ================= PUBLICATIONS ================= -->
 
 <section id="publications">
 
 <h2>Publications</h2>
 
-<p>
-Will be udated soon...
-</p>
+<div id="pub-list">
 
+<p>Will be updated soon...</p>
 
 </div>
 
 <p>
+
 <a href="https://scholar.google.com/citations?hl=en&user=xDMzlr0AAAAJ" target="_blank">
+
 View full list on Google Scholar →
+
 </a>
+
 </p>
 
 </section>
+
+
+<!-- ================= PROJECTS ================= -->
 
 <section id="projects">
 
 <h2>Projects</h2>
 
-<h3>Machine Learning Integrated SERS Platform</h3>
-
-<p>
-Development of automated photonic sensing system integrating spectroscopy and machine learning.
-</p>
-
-<h3> Sensing</h3>
-
-<p>
-Will be udated soon...
-</p>
-
-
-<h2>Projects</h2>
 
 <div class="project-card">
 
@@ -205,26 +248,28 @@ Development of automated photonic sensing system integrating spectroscopy and ma
 
 </div>
 
+
 <div class="project-card">
 
 <img src="images/ISD.png" class="project-img">
 
 <div>
 
-<h3>Sensing</h3>
+<h3>Optical Interferometric Sensing</h3>
 
 <p>
-Will be updated
+Design and development of interferometer-based high-sensitivity sensing systems.
 </p>
 
 </div>
 
 </div>
 
+
 </section>
 
 
-</section>
+<!-- ================= CONTACT ================= -->
 
 <section id="contact">
 
@@ -233,13 +278,21 @@ Will be updated
 <p>Email: rakesh_n@cpqct.iitr.ac.in</p>
 
 <p>
-Google Scholar:  
+
+Google Scholar:
+
 <a href="https://scholar.google.com/citations?hl=en&user=xDMzlr0AAAAJ" target="_blank">
-Rakesh Naik/
+
+View Profile
+
 </a>
+
 </p>
 
 </section>
+
+
+<!-- ================= FOOTER ================= -->
 
 <footer>
 
@@ -247,10 +300,24 @@ Rakesh Naik/
 
 </footer>
 
+
 </div>
 
-<script src="script.js"></script>
 
-</body>
-</html>
+<!-- ================= IMAGE ZOOM MODAL ================= -->
+
+<!-- ================= IMAGE ZOOM MODAL WITH NAVIGATION ================= -->
+
+<div id="imageModal" class="modal">
+
+<span class="close">&times;</span>
+
+<span class="nav-btn prev">&#10094;</span>
+
+<img class="modal-content" id="zoomedImg">
+
+<span class="nav-btn next">&#10095;</span>
+
+</div>
+
 
