--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Rakesh Naik | Photonics Researcher</title>
+<title>Rakesh Naik |Research Scholar</title>
 
 <link rel="stylesheet" href="style.css">
 
@@ -38,6 +38,8 @@ Photonics • Plasmonics • Application of AI/ML in Healthcare
 <div class="links">
 
 <a href="https://scholar.google.com/citations?hl=en&user=xDMzlr0AAAAJ" target="_blank">Google Scholar</a>
+  
+<a href="https://www.researchgate.net/profile/Rakesh-Naik-12?ev=hdr_xprf">ResearchGate</a>
 
 <a href="CV.pdf" target="_blank">CV</a>
 
@@ -326,4 +328,5 @@ View Profile
 
 </body>
 </html>
+
 
