--- a/index.html
+++ b/index.html
@@ -206,7 +206,35 @@ My goal is to build next-generation sensing platforms for biomedical diagnostics
 
 <div id="pub-list">
 
-<p>Will be updated soon...</p>
+<p>
+    <strong>Single-shot, receptor-free, rapid detection and classification of five respiratory viruses by machine learning integrated SERS sensing platform</strong><br>
+    A Yadav, R Naik, E Gupta, PP Roy, SK Srivastava<br>
+    <em>Biosensors and Bioelectronics 270, 117394</em>
+  </p>
+
+  <p>
+    <strong>Machine Learning-Enabled SERS (ML-SERS) Sensor for Rapid Classification of SARS-CoV-2 Variants in Clinical Nasopharyngeal Swab (CNS) Samples</strong><br>
+    SKS Arti Yadav, Rakesh Naik, Ekta Gupta, Partha Pratim Roy<br>
+    <em>2025 Optica Sensing Congress (OSC), 1–2</em>
+  </p>
+
+  <p>
+    <strong>Addressing Complexity and Variability Issues of SERS Spectra of Clinical Nasopharyngeal Swab (CNS) Samples for Respiratory Viruses Detection using Machine Learning</strong><br>
+    A Yadav, R Naik, E Gupta, PP Roy, SK Srivastava<br>
+    <em>CLEO: Applications and Technology, AA109_3</em>
+  </p>
+
+  <p>
+    <strong>Machine Learning-integrated SERS Platform for Single-Shot, Receptor-Free Rapid Detection and Classification of Respiratory Viruses</strong><br>
+    SKS Arti Yadav, Rakesh Naik, Ekta Gupta, Partha Pratim Roy<br>
+    <em>2025 Research Scholar Day, Department of Physics, 1</em>
+  </p>
+
+  <p>
+    <strong>Machine Learning-Based Detection and Classification of Bacterial and Fungal Species and Their Mixture through Raman Spectra Analysis</strong><br>
+    SKS Rakesh Naik<br>
+    <em>Workshop on Computational Techniques in Optics & Photonics</em>
+  </p>
 
 </div>
 
@@ -324,6 +352,7 @@ View Profile
 
 </body>
 </html>
+
 
 
 
