--- a/blog.html
+++ b/blog.html
@@ -7,53 +7,98 @@
 
 <link rel="stylesheet" href="style.css">
 
-</head>
+<article>
 
-<body>
+    <h1>🐝 A Honeybee Attack at Cautley Bhawan</h1>
 
-<div class="container">
+  <p style="color: gray; font-size: 14px;">
+    <strong>Published on:</strong> <span id="today-date"></span>
+  </p>
 
-<header>
+    <p>
+        Like every other day, I was returning from the gym, already thinking about breakfast, when something unusual caught my attention.
+        A boy was running across the courtyard, frantically trying to brush something off his head.
+        At first, I couldn’t understand what was happening.
+        Then I noticed the movement around him — bees.
+    </p>
 
-<h1>Blog</h1>
+    <p>
+        To confirm my suspicion, I asked the lady at the canteen what was going on.
+        She calmly told me that it was indeed a honeybee attack.
+        Strangely, she added that people nearby were moving normally, so she wasn’t sure why the boy was running so desperately.
+    </p>
 
-<nav>
-<a href="index.html">Home</a>
-<a href="blog.html">Blog</a>
-</nav>
+    <p>
+        Usually, after the gym, I head straight to the mess for breakfast.
+        But today felt different.
+        I thought, “Let’s skip breakfast for now. I’ll go back to my room and return later once things settle down.”
+    </p>
 
-</header>
+    <p>
+        As I turned toward my room, I suddenly heard it — a sharp, unsettling buzzing sound behind me.
+        Within seconds, I realized some bees were following me.
+        My heart started pounding.
+        I didn’t look back.
+        I just ran as fast as I could.
+    </p>
 
-<section>
+    <p>
+        When I finally reached a safer distance, a few students noticed my situation and helped me shoo away the bees that had clung to my jacket.
+        That moment of relief felt priceless.
+    </p>
 
-<div class="blog-post">
+    <p>
+        I rushed back to my room, trying to process what had just happened — and then it hit me.
+    </p>
 
-<h2>Building My SERS Platform</h2>
+    <p>
+        For the first time ever, I had forgotten my keys in the gym.
+    </p>
 
-<p class="date">March 2026</p>
+    <p>
+        I just stood there thinking, “Damn. What now?”
+    </p>
 
-<p>
-Will be updated..
-</p>
+    <p>
+        I called the security guard of Cautley Bhawan.
+        He told me he had also been attacked.
+        Apparently, experts were already working on handling the situation.
+        He asked me to wait for about thirty minutes.
+    </p>
 
-</div>
+    <p>
+        After waiting — and mentally replaying the entire episode — I finally went back to the gym, retrieved my keys, and then, at last, had my breakfast.
+    </p>
 
-<div class="blog-post">
+    <p>
+        It was one hell of an experience.
+    </p>
 
-<h2>Post 2</h2>
+    <p>
+        I used to have a dog phobia.
+        Now, it seems I might have developed a bee phobia as well.
+    </p>
 
-<p class="date">February 2026</p>
+    <p>
+        But beyond the fear, the incident forced me to think: why do bees attack?
+    </p>
 
-<p>
-Will be updated
-</p>
+    <p>
+        My first instinct was simple — defense.
+        Like most living beings, they probably sense danger and react to protect themselves.
+        Later, when I searched online, I discovered something fascinating: honeybees can sting only once.
+        After that, they die.
+    </p>
 
-</div>
+    <p>
+        In protecting their colony, they sacrifice themselves.
+    </p>
 
-</section>
+    <p>
+        Nature has its own harsh but powerful logic of survival.
+    </p>
 
-</div>
+</article>
 
 </body>
-
 </html>
