--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Photonics • Plasmonics • Application of AI/ML in Healthcare
 <h2>About</h2>
 
 <p>
-I am a PhD researcher working in photonics, plasmonics, and quantum optical sensing. 
+I am a PhD Scholar working in photonics, plasmonics, and bio sensing. 
 My research focuses on developing high-sensitivity optical sensing systems using Surface-Enhanced Raman Spectroscopy (SERS), optical interferometry, and computational analysis.
 </p>
 
@@ -352,6 +352,7 @@ View Profile
 
 </body>
 </html>
+
 
 
 
