--- a/blog.html
+++ b/blog.html
@@ -7,9 +7,28 @@
 
 <link rel="stylesheet" href="style.css">
 
-<article>
+</head>
 
-    <h1>🐝 A Honeybee Attack at Cautley Bhawan</h1>
+<body>
+
+<div class="container">
+
+<header>
+
+<h1>Blog</h1>
+
+<nav>
+<a href="index.html">Home</a>
+<a href="blog.html">Blog</a>
+</nav>
+
+</header>
+
+<section>
+
+<div class="blog-post">
+    <article>
+        <h2>🐝 A Honeybee Attack at Cautley Bhawan</h2>
 
   <p style="color: gray; font-size: 14px;">
     <strong>Published on:</strong> <span id="today-date"></span>
@@ -100,5 +119,42 @@
 
 </article>
 
+</div>
+
+<div class="blog-post">
+
+<h2>Post 2</h2>
+
+<p class="date">February 2026</p>
+
+<p>
+Will be updated
+</p>
+
+</div>
+
+</section>
+
+</div>
+
 </body>
+
 </html>
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+
+<meta charset="UTF-8">
+<title>Blog | Rakesh Naik</title>
+
+<link rel="stylesheet" href="style.css">
+
+
