--- a/blog.html
+++ b/blog.html
@@ -30,9 +30,7 @@
     <article>
         <h2>🐝 A Honeybee Attack at Cautley Bhawan</h2>
 
-  <p style="color: gray; font-size: 14px;">
-    <strong>Published on:</strong> <span id="today-date"></span>
-  </p>
+<p class="date"> 24th February 2026</p>
 
     <p>
         Like every other day, I was returning from the gym, already thinking about breakfast, when something unusual caught my attention.
@@ -156,5 +154,6 @@ Will be updated
 <title>Blog | Rakesh Naik</title>
 
 <link rel="stylesheet" href="style.css">
+
 
 
