--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Photonics • Plasmonics • Application of AI/ML in Healthcare
 
 <a href="#publications">Publications</a>
 
-<a href="#projects">Projects</a>
+<a href="gallery.html">Gallery</a>
 
 <a href="blog.html">Blog</a>
 
@@ -251,48 +251,6 @@ View full list on Google Scholar →
 </section>
 
 
-<!-- ================= PROJECTS ================= -->
-
-<section id="projects">
-
-<h2>Projects</h2>
-
-
-<div class="project-card">
-
-<img src="images/PWTI.png" class="project-img">
-
-<div>
-
-<h3>Machine Learning Integrated SERS Platform</h3>
-
-<p>
-Development of automated photonic sensing system integrating spectroscopy and machine learning.
-</p>
-
-</div>
-
-</div>
-
-
-<div class="project-card">
-
-<img src="images/ISD.png" class="project-img">
-
-<div>
-
-<h3>Optical Interferometric Sensing</h3>
-
-<p>
-Design and development of interferometer-based high-sensitivity sensing systems.
-</p>
-
-</div>
-
-</div>
-
-
-</section>
 
 
 <!-- ================= CONTACT ================= -->
@@ -352,6 +310,7 @@ View Profile
 
 </body>
 </html>
+
 
 
 
