--- a/gallery.html
+++ b/gallery.html
@@ -8,23 +8,23 @@
 
     <!-- Image Card -->
     <div class="gallery-item">
-      <img src="images/conference1.jpg" alt="Conference Photo 1">
-      <p>Optica Sensing Congress 2025</p>
+      <img src="Photos/AR_group_bsd.jpg" alt="Conference Photo 1">
+      <p>Convocation Ceremony of Dr. Riya  and Dr. Arti</p>
     </div>
 
     <div class="gallery-item">
-      <img src="images/conference2.jpg" alt="Conference Photo 2">
-      <p>CLEO Conference Presentation</p>
+      <img src="Photos/Ajay Ghatak.JPG" alt="Conference Photo 2">
+      <p>World Qunatum Day Celebration</p>
     </div>
 
     <div class="gallery-item">
-      <img src="images/lab1.jpg" alt="Lab Photo">
-      <p>Lab Experiment Setup</p>
+      <img src="Photos/FBG Demonstration.JPG" alt="Lab Photo">
+      <p>Explaining the working and applications of FBG</p>
     </div>
 
     <div class="gallery-item">
-      <img src="images/general1.jpg" alt="General Photo">
-      <p>Research Group Discussion</p>
+      <img src="GroupPoster.JPG" alt="General Photo">
+      <p>Group Poster Presentation</p>
     </div>
 
   </div>
